--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,102 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <title>Studio1001</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Studio 1001 - Indianapolis & Broad Ripple Nail Salon</title>
+  <meta name="description" content="Studio 1001 offers various spa services for our clients’ benefit. Spa services include full service manicures and pedicures. Our prices are listed for your convenience. Please contact us today to set up your next spa treatment.">
+  <meta name="author" content="Big Container Media">
+  <meta property="og:title" content="Studio 1001" />
+  <meta property="og:type" content="company" />
+  <meta property="og:image" content="studio_1001_web.png" />
+  <meta property="og:url" content="www.studio1001.net" />
+  <meta property="og:site_name" content="Studio 1001" />
+  <meta property="fb:admins" content="1246150717,13704751,527010450" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+  <div id="container">
+    <div id="header">
+      <div>
+        <%= image_tag 'studio_1001_header.png', {alt: "Studio 1001 Indianapolis Broad Ripple Nail Salon", class: 'center'} %>
+        <span id="tagline">Serving the north side of Indianapolis and Broad Ripple for 25 years!</span>
+      </div>
+    </div>
+  <div id="content_box" role="main">
+    <div id="top_nav" class="nav clearfix">
+      <ul>
+        <li><a href="/" title="Studio 1001 - Home">Home</a></li>
+        <li>
+          <ul class="sf-menu sf-js-enabled">
+            <li>
+              <a href="services" class="sf-with-ul">Services</a>
+              <ul style="width:100px;">
+                <li><a href="spa" class="first">Spa</a></li>
+                <li><a href="shellac" class="second">Shellac</a></li>
+                <li><a href="artificial_nail_enhancement">Artificial Nail Enhancement</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="about" title="Studio 1001 - About">About</a></li>
+        <li><a href="painted_lady" title="Studio 1001 - Painted Lady">Painted Lady</a></li>
+        <li><a href="contact" title="Studio 1001 - Contact">Contact</a></li>
+      </ul>
+    </div>
+    <div id="content" class="clearfix">
+      <%= yield %>
+    </div>
+    <div id="bottom_nav" class="nav clearfix">
+      <ul>
+        <li><a href="" title="Studio 1001">Home</a></li>
+        <li><a href="services" title="Studio 1001 - Services">Services</a></li>
+        <li><a href="about" title="Studio 1001 - About">About</a></li>
+        <li><a href="paintedlady" title="Studio 1001 - Portfolio">Painted Lady</a></li>
+        <li><a href="contact" title="Studio 1001 - Contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+  <div id="content_bottom_bg">&nbsp;</div>
+    <div id="footer" class="nav">
+    <ul>
+      <li>Location:
+        <ul>
+          <li>6144 Hillside Ave #1</li>
+          <li>Indianapolis, IN 46220-2474</li>
+        </ul>
+      </li>
+      <li>Hours:
+        <ul>
+          <li class="italic">Currently by appointment only</li>
+        </ul>
+      </li>
+      <li>Phone:
+        <ul>
+          <li>(317) 475-0087</li>
+        </ul>
+      </li>
+    </ul>
+    </div>
+  </div> <!--! end of #container -->
+  
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-<%= yield %>
-
+    ga('create', 'UA-43668494-1', 'studio1001.net');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
